--- a/02_Febrero_2023/SistemadeEcuacionesNoLineales.tex
+++ b/02_Febrero_2023/SistemadeEcuacionesNoLineales.tex
@@ -9,40 +9,40 @@
     \section*{Definición 1.1}
     Una función que satisface el principio de superposición se dice que es entonces una función lineal. La propiedad de superposición se puede definir mediante dos propiedades.
     \begin{center}
-        1.- {$f(x1 + x2) = f(x1) + f(x2)$} - Aditividad
+        1.- {$f(x_{1} + x_{2}) = f(x_{1}) + f(x_{2})$} $\rightarrow$ Aditividad
     \end{center}
     \begin{center}
-        2.- {$f(\alpha x1) = \alpha f(x1)$} - Homogeneidad
+        2.- {$f(\alpha x_{1}) = \alpha f(x_{1})$} $\rightarrow$ Homogeneidad
     \end{center}
     \small{Nota: Si una función no cumple con estas propiedades, decimos entonces que es una función no lineal.}
     \section*{Definición 1.2}
     Un sistema de ecuaciones no lineales es un conjunto de su forma.
     \begin{center}
-        $fi(x1, x2, x3, \dots, xn) = 0$
+        $fi(x_{1}, x_{2}, x_{3}, \dots, x_{n}) = 0$
     \end{center}
     \begin{center}
-        $f2(x1, x2, x3, \dots, xn) = 0$
+        $f_{2}(x_{1}, x_{2}, x_{3}, \dots, x_{n}) = 0$
     \end{center}
     \begin{center}
         \dots
     \end{center}
     \begin{center}
-        $fn(x1, x2, x3, \dots, xn) = 0$
+        $f_{n}(x_{1}, x_{2}, x_{3}, \dots, x_{n}) = 0$
     \end{center}
-    donde la función $f1$ se puede ver como un "mapeo" del vector $(x1, x2, x3, \dots, xn)$ de $\mathbb{R}n$ a $\mathbb{R}$.  Este sistema de $n$ ecuaciones no lineales en $n$ variables también puede tener la forma:
+    donde la función $f_{1}$ se puede ver como un "mapeo" del vector $(x_{1}, x_{2}, x_{3}, \dots, x_{n})$ de $\mathbb{R}^{n}$ a $\mathbb{R}$.  Este sistema de $n$ ecuaciones no lineales en $n$ variables también puede tener la forma:
     \begin{center}
-        $f(x1, x2, x3, \dots, xn)
-        =(f(x1, x2, x3, \dots, xn), f2(x1, x2, x3, \dots, xn),\dots, fn(x1, x2, x3, \dots, xn))$
+        $f(x_{1}, x_{2}, x_{3}, \dots, x_{n})
+        =(f_{1}(x_{1}, x_{2}, x_{3}, \dots, x_{n}), f_{2}(x_{1}, x_{2}, x_{3}, \dots, x_{n}),\dots, f_{n}(x_{1}, x_{2}, x_{3}, \dots, x_{n}))$
 
     \end{center} 
-    Si se utiliza notación vectorial para representar las variables $x1, x2, \dots, xn$ entonces el sistema asume la forma 
+    Si se utiliza notación vectorial para representar las variables $x_{1}, x_{2}, \dots, x_{n}$ entonces el sistema asume la forma 
     \begin{center}
         $F(\overrightarrow{x} = 0 )$
     \end{center}
     \section*{Definición 1.3}
-    Una solución de un sistema de ecuaciones/funciones $f1, f2, f3, f4, \dots, fn$ de $n$ funciones en $n$ variables es un punto $(x1, x2, x3, \dots, xn) \in \mathbb{R}n$ tal que 
+    Una solución de un sistema de ecuaciones/funciones $f_{1}, f_{2}, f_{3}, f_{4}, \dots, f_{n}$ de $n$ funciones en $n$ variables es un punto $(x_{1}, x_{2}, x_{3}, \dots, x_{n}) \in \mathbb{R}^{n}$ tal que 
     \begin{center}
-        $f1(a1, a2, a3, \dots, an) = f2(a1, a2, a3, \dots, an) = \dots = fn(a1, a2, a3, \dots, an) = 0  $
+        $f_{1}(a_{1}, a_{2}, a_{3}, \dots, a_{n}) = f_{2}(a_{1}, a_{2}, a_{3}, \dots, a_{n}) = \dots = f_{n}(a_{1}, a_{2}, a_{3}, \dots, a_{n}) = 0  $
     \end{center}
     \small{Nota: Debido a que los sistemas no lineales no se comportan tan bien como los lineales al momento de encontrar un modo para su solución, se usarán procedimientos llamados \it{métodos iterativos}.}
     \section*{Definición 1.4}
